--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>EasyKU</title>
+  <title>EasyKu</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">  
@@ -14,7 +14,7 @@
 	<div class="jumbotron">
 		<h1>欢迎下载使用EasyKu！</h1>
 		<p>这是一个容易上手的建题管理工具 </p>
-		<p><a class="btn btn-primary btn-lg" role="button" href="https://github.com/yanjinhuagood/EasyKu.github.io/archive/1.1.1.zip">
+		<p><a class="btn btn-primary btn-lg" role="button" href="https://codeload.github.com/yanjinhuagood/EasyKu.github.io/zip/1.1.1">
 			立即下载</a>
 		</p>
 	</div>
