--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-	<div class="jumbotron">
+	<div class="row myCenter">
 		<h1>欢迎下载使用EasyKu！</h1>
 		<p>这是一个容易上手的建题管理工具 </p>
 		<p><a class="btn btn-primary btn-lg" role="button" href="https://codeload.github.com/yanjinhuagood/EasyKu.github.io/zip/1.1.1">
