--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">  
   <script src="jquery/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+	<style>
+.col-center-block {
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+</style>
+
 </head>
 <body>
 
 <div class="container">
-	<div class="row myCenter">
+	<div class="jumbotron">
 		<h1>欢迎下载使用EasyKu！</h1>
 		<p>这是一个容易上手的建题管理工具 </p>
 		<p><a class="btn btn-primary btn-lg" role="button" href="https://codeload.github.com/yanjinhuagood/EasyKu.github.io/zip/1.1.1">
