--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
 <div class="container">
 	<div class="jumbotron">
+		<div class="col-xs-6 col-md-4 col-center-block">
 		<h1>欢迎下载使用EasyKu！</h1>
 		<p>这是一个容易上手的建题管理工具 </p>
 		<p><a class="btn btn-primary btn-lg" role="button" href="https://codeload.github.com/yanjinhuagood/EasyKu.github.io/zip/1.1.1">
 			立即下载</a>
 		</p>
+		</div>	
 	</div>
 </div>
 
